Bug Fix Merge Sort and Radix Sort

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,8 @@
         "fstream": "cpp",
         "ratio": "cpp",
         "array": "cpp",
-        "ctime": "cpp"
+        "ctime": "cpp",
+        "xmemory0": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
